<?xml version="1.0" encoding="utf-8"?>
<resources> 
    <string name="app_name">OpenAlmanac</string>
	<string name="almanacinfo">Information</string>
	<string name="almanacevents">Events</string>
	<string name="todayis_label">Today is:</string>
	<string name="stardate_label">Stardate:</string>
	<string name="islamic_calendar_label">Islamic calendar:</string>
	<string name="mayan_calendar_label">Mayan calendar:</string>
	<string name="saintofday_label">Memorial of:</string>
	<string name="sunrisesunsite_label">Sunrise/Sunset:</string>
	<string name="moonphase_label">Moon phase:</string>
	<string name="new_moon">New moon</string>
    <string name="first_quarter">First quarter</string>    
    <string name="full_moon">Full moon</string>
    <string name="third_quarter">Third quarter</string>    
    <string name="waxing_crescent">Waxing crescent</string>
    <string name="waxing_gibbous">Waxing gibbous</string>    
    <string name="waning_gibbous">Waning gibbous</string>
    <string name="waning_crescent">Waning crescent</string>    
    <string name="today_label">Today</string>    
    <string name="choose_date_label">Choose date</string>
    <string name="vocalize_label">Vocalize</string>
    <string name="screenshot_label">Screenshot</string>
    <string name="options_label">Options</string>
    <string name="copytoclipboard_label">Copy to clipboard</string>
    <string name="sharedata_label">Share</string>
    <string name="sharedata_menu_label">Share using:</string>
    <string name="copiedtoclipboard_label">Data copied to the clipboard!</string>
    <string name="notyetimplemented_label">Not yet implemented!</string>
    <string name="longitude_label">Longitude:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="eula_accept_label">Accept</string>
    <string name="eula_refuse_label">Refuse</string>
    <string name="preference_label">Almanac Options:</string>
    <string name="preference_category_label">Default coordinates:</string>
    <string name="preference_longitude_label">Insert default Longitude</string>
    <string name="preference_latitude_label">Insert default Latitude</string>
    <string name="preference_info_version">Version</string>
    <string name="preference_report_an_issue_bug">Report a Bug</string>
    <string name="preference_report_an_issue_bug_label">Enter a new bug on Issue Tracker</string>
    <string name="preference_changelog">Changelog</string>
    <string name="preference_changelog_label">Display application Changelog</string>
	<string name="preference_license">License</string>
    <string name="preference_license_label">View the license application</string>
    <string name="easter_name_label">Easter</string>
    <string name="easter_description_label">Resurrection of Jesus</string>
    <string name="SaintOfDay_label">Saint of day:</string>
    <string name="warning_gps_notactive">Warning! The tracking system is not active.
The times of sunrise / sunset are calculated using the default data.</string>
	<string-array name="daysofweek_label">
		<item>Sunday</item>
		<item>Monday</item>
		<item>Tuesday</item>
		<item>Wednesday</item>
		<item>Thursday</item>
		<item>Friday</item>
		<item>Saturday</item>
	</string-array>
	<string-array name="monthsofyear_label">
		<item>January</item>
		<item>February</item>
		<item>March</item>
		<item>April</item>
		<item>May</item>
		<item>June</item>
		<item>July</item>
		<item>August</item>
		<item>September</item>
		<item>October</item>
		<item>November</item>
		<item>December</item>
	</string-array>
</resources>
