<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res/it.almanac" 
android:title="@string/preference_label"
android:key="Preference">
<PreferenceCategory android:title="@string/preference_category_label">
	<EditTextPreference android:title="@string/latitude_label"
	 android:key="Latitude"
	 android:summary="@string/preference_latitude_label"
	 android:defaultValue="41.898416" />
	<EditTextPreference android:title="@string/longitude_label" 
	android:key="Longitude"
	android:summary="@string/preference_longitude_label" 
	android:defaultValue="12.545145" />
</PreferenceCategory>
<PreferenceCategory android:title="Info"/>
	<Preference
		 android:key="Version"
		 android:title="@string/preference_info_version" 
		 android:summary="This allows you to enter a string" style="?android:preferenceInformationStyle"/>
	<Preference
			android:key="Report_an_issue_bug_key"
			android:title="@string/preference_report_an_issue_bug"
			android:summary="@string/preference_report_an_issue_bug_label" />
	<it.almanac.AlmanacDialogPreference
			app:fileName="@string/changelog_filename"
			android:key="Preference_changelog"
			android:title="@string/preference_changelog"
			android:summary="@string/preference_changelog_label"
			android:dialogIcon="@drawable/ic_dialog_info"
			android:dialogTitle="@string/preference_changelog"
			android:negativeButtonText="@null" />
	<it.almanac.AlmanacDialogPreference
			app:fileName="@string/eula_filename"
			android:title="@string/preference_license"
			android:dialogIcon="@drawable/ic_dialog_info"
			fileName="@string/eula_filename"
			android:negativeButtonText="@null"				
			android:dialogTitle="@string/preference_license"
			android:summary="@string/preference_license_label"
			android:key="Preference_eula" />
</PreferenceScreen>


